Link to HTML URL

--- a/_repo_section.Rmd
+++ b/_repo_section.Rmd
@@ -1,4 +1,4 @@
-## [{{ repo[["name"]] }}]({{ repo[["url"]] }})
+## [{{ repo[["name"]] }}]({{ repo[["html_url"]] }})
 
 ```{r, results='asis'}
 workflows <- gh::gh("/repos/{{ repo[['full_name']] }}/actions/workflows") |>
