--- a/index.Rmd
+++ b/index.Rmd
@@ -1,8 +1,6 @@
 ---
-output: github_document
+output: html_document
 ---
-
-<!-- README.md is generated from README.Rmd. Please edit that file -->
 
 ```{r, include = FALSE}
 knitr::opts_chunk$set(
