--- a/_repo_section.Rmd
+++ b/_repo_section.Rmd
@@ -1,8 +1,7 @@
 ## [{{ repo[["name"]] }}]({{ repo[["html_url"]] }})
 
 ```{r, results='asis'}
-workflows <- gh::gh("/repos/{{ repo[['full_name']] }}/actions/workflows") |>
-  purrr::pluck("workflows") |> 
+{{ workflows }} |> 
   purrr::keep(~ .x[["state"]] == "active") |>
   purrr::map_chr(~ glue::glue("[![]({.x[['badge_url']]})]({.x[['html_url']]})")) |>
   cat(sep = "\n\n") |> 
