--- a/index.Rmd
+++ b/index.Rmd
@@ -26,15 +26,20 @@ repos <- gh::gh("/orgs/{org}/repos", org = Sys.getenv("GITHUB_REPOSITORY_OWNER")
 repos |> 
   purrr::map(function(repo) {
     workflows <- gh::gh("/repos/{repo}/actions/workflows", repo = repo[['full_name']])
-    if (workflows$total_count != 0) {
-      knitr::knit_expand(
-        "_repo_section.Rmd", 
-        repo = repo,
-        workflows = workflows
-      )
-    } else {
-      NULL
+    if (workflows$total_count == 0) {
+      return(NULL)
     }
+    workflows <- workflows$workflows |> 
+      # page deployment action. There is no badge for this unusual workflow
+      purrr::discard(~ startsWith(.x[["path"]], "dynamic/"))
+    if (length(workflows) == 0) {
+      return(NULL)
+    }
+    knitr::knit_expand(
+      "_repo_section.Rmd", 
+      repo = repo,
+      workflows = workflows
+    )
   }) |> 
   unlist() |> 
   sort(method = "radix") |> 
